--- a/BulkyBookWeb/Views/Category/Create.cshtml
+++ b/BulkyBookWeb/Views/Category/Create.cshtml
@@ -21,7 +21,7 @@
             <h2 class="text-primary">Create Category</h2>
             <hr />
         </div>
-        <div asp-validation-summary="All"></div>
+        @*<div asp-validation-summary="All"></div>*@
         <div class="mb-3">
             <label asp-for="Name"></label>
             <input asp-for="Name" class="form-control" />
@@ -38,3 +38,9 @@
         </a>
     </div>
 </form>
+
+@section Scripts{
+    @{
+        <partial name="_ValidationScriptsPartial" />
+    }
+}
