--- a/BulkyBookWeb/Views/Category/Index.cshtml
+++ b/BulkyBookWeb/Views/Category/Index.cshtml
@@ -24,6 +24,8 @@
                 <th>
                     Category Order
                 </th>
+                <th>
+                </th>
             </tr>
         </thead>
         <tbody>
@@ -35,6 +37,13 @@
                     </td>
                     <td width="30%">
                         @obj.DisplayOrder
+                    </td>
+                    <td>
+                        <div class="w-75 btn-group" role="group">
+                            <a asp-controller="Category" asp-action="Edit" asp-route-id= "@obj.Id" class="btn btn-primary">
+                                <i class="bi bi-pencil-square"></i>Edit
+                            </a>
+                        </div>
                     </td>
                 </tr>
             }
