--- a/BulkyBookWeb/Views/Category/Index.cshtml
+++ b/BulkyBookWeb/Views/Category/Index.cshtml
@@ -38,12 +38,15 @@
                     <td width="30%">
                         @obj.DisplayOrder
                     </td>
-                    <td>
+                    <td class="text-center">
                         <div class="w-75 btn-group" role="group">
-                            <a asp-controller="Category" asp-action="Edit" asp-route-id= "@obj.Id" class="btn btn-primary">
+                            <a asp-controller="Category" asp-action="Edit" asp-route-id= "@obj.Id" class="btn btn-primary w-50">
                                 <i class="bi bi-pencil-square"></i>Edit
                             </a>
-                        </div>
+                            <a asp-controller="Category" asp-action="Delete" asp-route-id= "@obj.Id" class="btn btn-secondary w-50">
+                                <i class="bi bi-trash3"></i>Delete
+                            </a>
+                        </div>                        
                     </td>
                 </tr>
             }
