--- a/BulkyBookWeb/Views/Shared/_Notification.cshtml
+++ b/BulkyBookWeb/Views/Shared/_Notification.cshtml
@@ -1,35 +1,9 @@
-﻿@if (TempData["created"] != null)
+﻿@if (TempData["success"] != null)
 {
     @*<div class="alert alert-dismissible alert-success my-3">
         <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
         <h2 class="text-center">@TempData["created"]</h2>
         </div>*@
-    <script src="~/lib/jquery/dist/jquery.min.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
-    <script type="text/javascript">
-        toastr.success('@TempData["created"]')
-    </script>
-
-}
-@if (TempData["updated"] != null)
-{
-    <script src="~/lib/jquery/dist/jquery.min.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
-    <script type="text/javascript">
-        toastr.success('@TempData["updated"]')
-    </script>
-}
-@if (TempData["deleted"] != null)
-{
-    <script src="~/lib/jquery/dist/jquery.min.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
-    <script type="text/javascript">
-        toastr.success('@TempData["deleted"]')
-    </script>
-}
-
-@if (TempData["success"] != null)
-{
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
     <script type="text/javascript">
